k8s/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    php-app: mariadb
  name: mariadbservice
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    php-app: mariadb
