k8s/php-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    php-app: php
  name: appservice
spec:
  ports:
    - name: "8181"
      port: 8181
      targetPort: 8181
  selector:
    php-app: my-app
