k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: "shivani.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appservice
            port:
              number: 8181
